Ignore invalid mutators
That perform mutations not deemed useful for this project

--- a/infection.json.dist
+++ b/infection.json.dist
@@ -5,5 +5,9 @@
     },
     "logs": {
         "text": "infection-log.txt"
+    },
+    "mutators": {
+        "@default": true,
+        "IdenticalEqual": false
     }
 }
