--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "doctrine/coding-standard": "^5.0",
         "infection/infection": "^0.10.6",
         "phpstan/phpstan": "^0.10.5",
+        "phpstan/phpstan-strict-rules": "^0.10.1",
         "phpunit/phpunit": "^7.4",
         "squizlabs/php_codesniffer": "^3.3"
     }
