--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     },
     "prefer-stable": true,
     "require": {
-        "php": "^7.4"
+        "php": "^7.4 || ^8.0"
     },
     "suggest": {
         "dsantang/domain-events-doctrine": "To automatically dispatch and listen to this package's domain events when a doctrine transaction is finished."
