Give credit where it's due

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,12 @@
     "authors": [
         {
             "name": "Davide Santangelo"
+        },
+        {
+            "name": "Giacomo Pinato"
+        },
+        {
+            "name": "Giacomo Fornari"
         }
     ],
     "license": [
